02/16/2024
gv.py:
-- Created to save "global" variables for use across modules
thermo.py:
-- Integrated loop code from daviswx.py
-- Rewritten to use global variable file gv.py
-- Integrating Davis weather center code lets us use more accurate temperature readings for inside and outside
>>> Modified Attic Fans on/off checking code to use new temperature variables
>>> Weather center data must be at most 15 minutes old to use, otherwise fall back to TMP36 sensors
-- A few other small code changes
daviswx.py:
-- Now only contains functions relating to the Davis Vantage Pro2 weather center
-- Rewritten to use global variable file gv.py

02/11/2024
thermo.py:
-- MakerHawk UPS+ failed, UPS code disabled and UPS disconnected
-- Moved all MakerHawk UPS+ code to MakerHawkUPS.py
-- Integrated webvarloader.py code with updatesettings()
MakerHawkUPS.py:
-- Code from thermo.py moved here in case I need it in the future
daviswx.py:
-- Created to read data from my Davis Vantage Pro 2 Weather Center and send the output to my website
-- Much of the code is based on WOSPi (http://www.annoyingdesigns.com/wospi/), modified to suit my own needs
-- Loop runs every 5 minutes
pitemp.php:
-- Added functions to receive Davis weather center data from daviswx.py
-- Updated index to feature most interesting weather data info
-- Fix tab delimiting inconsistencies
webvarloader.py:
-- Removed as code has been moved to thermo.py and this file is no longer needed

02/10/2024
thermo.py:
-- Moved file loads to top
-- Moved web-changeable settings to a single dict, which will now be the only thing modified by WebVars
-- Rewrote all print() statements
pitemp.php:
-- Added lastWebChangeStr to WebVars (String representation of lastWebChange which is UnixTime)

02/07/2024
webvarloader.py:
-- Fixed problem with receiving no (or partial) data from website causing script to crash by moving the entire site read code to the try loop
-- Added date/time to console output
pitemp.php: